[GTK] Garbled rendering on Youtube while scrolling under X11. https://bugs.webkit.org/show_bug.cgi?id=192982

Reviewed by Carlos Garcia Campos.

When creating a GLX window context, try to get a GLXFBConfig that has depth and stencil buffers for
the default framebuffer.

* platform/graphics/glx/GLContextGLX.cpp:
(WebCore::compatibleVisuals):
(WebCore::GLContextGLX::createWindowContext):


Canonical link: https://commits.webkit.org/207853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239869 268f45cc-cd09-0410-ab3c-d52691b4dbfc